--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,12 +3,10 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
 COPY BelaDesignHub.sln ./
-COPY BelaDesignHub.Api/BelaDesignHub.Api.csproj BelaDesignHub.Api/
-RUN dotnet restore BelaDesignHub.Api/BelaDesignHub.Api.csproj
+COPY src/ ./src/
+RUN dotnet restore src/BelaDesignHub.Api/BelaDesignHub.Api.csproj
 
-COPY . .
-WORKDIR /src/BelaDesignHub.Api
-RUN dotnet publish -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish src/BelaDesignHub.Api/BelaDesignHub.Api.csproj -c Release -o /app/publish /p:UseAppHost=false
 
 # Runtime stage
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
