--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       ASPNETCORE_ENVIRONMENT: Development
       ConnectionStrings__DefaultConnection: Host=postgres;Port=5432;Database=bela_design_hub;Username=postgres;Password=postgres
+      Cors__AllowedOrigins: http://frontend:4173
     ports:
       - "8080:8080"
 
@@ -16,9 +17,9 @@ services:
       backend:
         condition: service_started
     environment:
-      VITE_API_BASE_URL: http://localhost:8080
+      VITE_API_BASE_URL: http://backend:8080
     ports:
-      - "5173:80"
+      - "4173:80"
 
   postgres:
     image: postgres:16-alpine
