--- a/backend/src/BelaDesignHub.Api/appsettings.Development.json
+++ b/backend/src/BelaDesignHub.Api/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=bela_design_hub;Username=postgres;Password=postgres"
+  },
+  "Cors": {
+    "AllowedOrigins": "http://localhost"
   }
 }
